@@ -3,14 +3,12 @@ v1.2
 	button to save all tagged files
 	don't allow vert resize when collapsed
 	clean up on_infowindow_show
-	include album/artist in remote artwork window
 	playlist saving (0.13 only)
 		current tab:
 			- save... >
 				new playlist...
 				to existing playlist... ---> popup window with dropdown of playlists
 				...
-	ability to clear artwork from right-click menu
 	
 Future:
 	lyrics -> allow user to edit, fetch, refresh, search terms..?
@@ -27,3 +25,4 @@ Future:
 		playlist tab:
 			ability to view songs, reorder songs, remove songs, etc
 	use GtkVolumeButton?
+	reduce python dependencies...
